More documentation and refactoring fixes

--- a/VtlSoftware.Logging/InterpolatedStringHandlerImplementation/Handlers.tt
+++ b/VtlSoftware.Logging/InterpolatedStringHandlerImplementation/Handlers.tt
@@ -13,7 +13,7 @@ namespace VtlSoftware.Logging;
 <# foreach (var logLevel in logLevels) { #>
 
 [InterpolatedStringHandler]
-public ref struct VtlLogging<#= logLevel #>InterpolatedStringHandler
+public readonly ref struct  VtlLogging<#= logLevel #>InterpolatedStringHandler
 {
     private readonly VtlLoggingInterpolatedStringHandler handler;
 
